--- a/src/styles/MainMenu.css
+++ b/src/styles/MainMenu.css
@@ -5,24 +5,68 @@
 }
 .main-menu-container {
   display: flex;
-  line-height: 100px;
+  height: 100%;
+  margin-left: 100px;
+  align-items: center;
+}
+
+.main-menu-search-form {
+  margin-left: 800px;
+}
+.searchInput {
+  width: 200px;
+  height: 30px;
+  border-radius: 5px;
+}
+.form-button {
+  margin-left: 5px;
+  height: 30px;
+  border-radius: 5px;
+  background-color: white;
+  color: rgb(8, 93, 47);
+  border: 0;
+  cursor: pointer;
+}
+.form-button:hover {
+  background-color: rgb(101, 164, 130);
+  color: white;
 }
 
 .cart-button {
   display: flex;
   width: fit-content;
-  height: 30px;
+  height: 40px;
   text-align: center;
-  line-height: 30px;
+  line-height: 40px;
+  margin-left: 20px;
+  color: white;
+  font-size: larger;
+  text-decoration: none;
 }
+
+.cart-button:hover {
+  color: rgb(101, 164, 130);
+  text-decoration: underline;
+}
+
 .login-button {
   display: flex;
   width: fit-content;
   height: 30px;
   text-align: center;
   line-height: 30px;
+  margin-left: 20px;
+  color: white;
+  font-size: larger;
+  text-decoration: none;
 }
 .login-img {
+  margin-right: 5px;
   background-color: white;
   border-radius: 50%;
+}
+
+.login-button:hover {
+  color: rgb(101, 164, 130);
+  text-decoration: underline;
 }
