added main field and styles

--- a/src/styles/Carousel.css
+++ b/src/styles/Carousel.css
@@ -48,8 +48,9 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  text-decoration: underline;
   color: white;
+  font-family: "Kanit", sans-serif;
+  line-height: 10px;
 }
 
 .rightArrow {
