--- a/src/styles/MainMenu.css
+++ b/src/styles/MainMenu.css
@@ -24,8 +24,10 @@
   border-radius: 5px;
   background-color: white;
   color: rgb(8, 93, 47);
+  font-family: "Kanit", sans-serif;
   border: 0;
   cursor: pointer;
+  transition: 0.5s;
 }
 .form-button:hover {
   background-color: rgb(101, 164, 130);
@@ -40,8 +42,10 @@
   line-height: 40px;
   margin-left: 20px;
   color: white;
+  font-family: "Kanit", sans-serif;
   font-size: larger;
   text-decoration: none;
+  transition: 0.3s;
 }
 
 .cart-button:hover {
@@ -58,6 +62,7 @@
   margin-left: 20px;
   color: white;
   font-size: larger;
+  font-family: "Kanit", sans-serif;
   text-decoration: none;
 }
 .login-img {
