added remove from cart, sign of copyright and styles

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,3 +7,12 @@ body {
   align-items: center;
   flex-direction: column;
 }
+.copyraith {
+  position: absolute;
+  bottom: 0;
+  left: 45%;
+  margin-bottom: 20px;
+  font-family: "Kanit", sans-serif;
+  color: rgb(107, 107, 107);
+  font-size: larger;
+}
