--- a/src/styles/MainMenu.css
+++ b/src/styles/MainMenu.css
@@ -33,6 +33,9 @@
   background-color: rgb(101, 164, 130);
   color: white;
 }
+.cart-icon {
+  display: flex;
+}
 
 .cart-button {
   display: flex;
@@ -51,6 +54,18 @@
 .cart-button:hover {
   color: rgb(101, 164, 130);
   text-decoration: underline;
+}
+
+.pointer-quantity-products {
+  width: 20px;
+  height: 23px;
+  margin-left: 10px;
+  margin-top: 10px;
+  text-align: center;
+  background-color: cadetblue;
+  border-radius: 50%;
+  font-family: "Kanit", sans-serif;
+  color: white;
 }
 
 .login-button {
