--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -22,7 +22,7 @@
   width: 700px;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   background-color: white;
   font-family: "Kanit", sans-serif;
   font-size: large;
