--- a/src/styles/ProductsField.css
+++ b/src/styles/ProductsField.css
@@ -2,15 +2,39 @@
   position: relative;
   display: flex;
   justify-content: center;
+  flex-direction: column;
   width: 100%;
   height: 1000px;
+  margin-top: 20px;
 }
 .title-products-field {
-  position: absolute;
-  left: 0;
-  margin-left: 20px;
+  margin-left: 40px;
   font-family: "Kanit", sans-serif;
   color: rgb(107, 107, 107);
+}
+.products-field-select {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 40px;
+  height: fit-content;
+}
+.products-field-btn {
+  width: fit-content;
+  height: fit-content;
+  font-family: "Kanit", sans-serif;
+  color: rgb(107, 107, 107);
+  font-size: larger;
+}
+.products-field-ul {
+  display: none;
+  display: flex;
+  flex-direction: row;
+}
+.products-field-li {
+  margin-left: 10px;
+  font-family: "Kanit", sans-serif;
+  font-size: medium;
 }
 
 .products-field {
@@ -18,12 +42,13 @@
   flex-wrap: wrap;
   width: 90%;
   height: 90%;
-  margin-top: 100px;
+  margin-top: 40px;
 }
 .product-block {
   display: flex;
   flex-direction: column;
   margin-left: 40px;
+  margin-bottom: 40px;
   width: 300px;
   height: 400px;
   border: 1px solid rgb(185, 185, 185);
