--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -18,6 +18,18 @@
   color: rgb(107, 107, 107);
 }
 
+.login-validErr {
+  width: 200px;
+  height: 30px;
+  margin-left: 50px;
+  font-family: "Kanit", sans-serif;
+  color: rgb(200, 50, 50);
+  font-size: large;
+  font-weight: 500;
+  text-align: center;
+  line-height: 30px;
+}
+
 .login-form-block {
   width: 700px;
   display: flex;
